# CS-Pkg-TEMPLATE

./: .gitignore  CMakeLists.txt  CMakePresets.json  CircuitSimBootstrap.cmake  CircuitSimSDK.cmake  plugin.json
ExamplePlugin/: CMakeLists.txt
ExamplePlugin/src/: start.cpp  start.hpp
ExamplePlugin/test/: CMakeLists.txt
ExamplePlugin/test/src/: test_example.cpp
export/EXAMPLES/FORWARDER/: FORWARDER.cas
export/test/: test.sch  test.sch.state
plugins/: manifest.cmake
